# wootz-browser

./: .flutter-plugins  .flutter-plugins-dependencies  .gclient  .gclient_entries  .gcs_entries  .gitignore  LICENSE  README.md  cla.md  justfile  l10n.yaml  pubspec.yaml  wootzapp_changes.patch
chrome/browser/resources/wootzapp_throttle/: BUILD.gn  wootzapp_.js  wootzapp_browser_bridge.js  wootzapp_index.js  wootzapp_main.css  wootzapp_throttle_view.js  wootzapp_view.js
src/android_webview/crwebview/: AndroidManifest.xml  BUILD.gn  content_android_resources_AndroidManifest.xml  proguard.flags  ui_android_resources_AndroidManifest.xml
src/chrome/android/: BUILD.gn  chrome_java_resources.gni  chrome_java_sources.gni  java_sources.gni
src/chrome/android/expectations/: lint-baseline.xml
src/chrome/android/java/: AndroidManifest.xml  AndroidManifest_intent_filters.xml
src/chrome/android/proguard/: main.flags
src/chrome/browser/wootz_adaptive_captcha/: sources.gni  wootz_adaptive_captcha_service_factory.cc  wootz_adaptive_captcha_service_factory.h
src/chrome/browser/wootz_rewards/: BUILD.gn  rewards_service_factory.cc  rewards_service_factory.h  rewards_util.cc  rewards_util.h  sources.gni
src/chrome/browser/wootz_vpn/: BUILD.gn  sources.gni  vpn_utils.cc  vpn_utils.h  wootz_vpn_service_factory.cc  wootz_vpn_service_factory.h
src/chrome/browser/wootz_wallet/: BUILD.gn  DEPS  asset_discovery_manager_unittest.cc  asset_discovery_task_unittest.cc  asset_ratio_service_factory.cc  asset_ratio_service_factory.h  blockchain_images_source.cc  blockchain_images_source.h  blockchain_images_source_unittest.cc  eth_allowance_manager_unittest.cc  eth_pending_tx_tracker_unittest.cc  ethereum_provider_browsertest.cc  ethereum_provider_impl_unittest.cc  external_wallets_importer.cc  external_wallets_importer.h  external_wallets_importer_unittest.cc  filecoin_keyring_unittest.cc  keyring_service_unittest.cc  meld_integration_service_factory.cc  meld_integration_service_factory.h  send_or_sign_transaction_browsertest.cc  simulation_service_factory.cc  simulation_service_factory.h  solana_provider_browsertest.cc  solana_provider_impl_unittest.cc  solana_provider_renderer_browsertest.cc  swap_service_factory.cc  swap_service_factory.h  wallet_data_files_installer_delegate_impl.cc  wallet_data_files_installer_delegate_impl.h  wallet_notification_helper.h  wallet_watch_asset_browsertest.cc  wootz_wallet_context_utils.cc  wootz_wallet_context_utils.h  wootz_wallet_ethereum_chain_browsertest.cc  wootz_wallet_event_emitter_browsertest.cc  wootz_wallet_ipfs_service_factory.cc  wootz_wallet_ipfs_service_factory.h  wootz_wallet_policy_browsertest.cc  wootz_wallet_provider_delegate_impl.cc  (+20 more)
src/chrome/components/filecoin/: BUILD.gn  README.chromium
src/chrome/components/resources/: BUILD.gn  domain_block_resources.grdp  wootz_components_resources.grd  wootz_components_strings.grd  wootz_wallet_resources.grdp
src/chrome/net/: BUILD.gn  sources.gni
src/chrome/net/base/: BUILD.gn  url_util.cc  url_util.h  url_util_unittest.cc  wootz_host_port_pair_unittest.cc
src/chrome/net/decentralized_dns/: constants.h
src/chrome/net/dns/: secure_dns_counter.cc  secure_dns_counter.h  secure_dns_endpoints.h  sources.gni
src/chrome/net/http/: partitioned_host_state_map.cc  partitioned_host_state_map.h  partitioned_host_state_map_unittest.cc  transport_security_state_unittest.cc
src/chrome/net/proxy_resolution/: configured_proxy_resolution_service_unittest.cc  proxy_config_service_tor.cc  proxy_config_service_tor.h  proxy_config_service_tor_unittest.cc
src/chrome/renderer/wootz_wallet/: BUILD.gn  DEPS  wootz_wallet_render_frame_observer.cc  wootz_wallet_render_frame_observer.h  wootz_wallet_render_frame_observer_p3a_util.cc  wootz_wallet_render_frame_observer_p3a_util.h
src/chrome/resources/: BUILD.gn  allowlist.gni  resource_ids.spec  wootz_allowlist.py  wootz_grit.gni
src/components/constants/: BUILD.gn  network_constants.h  pref_names.h  url_constants.h  webui_url_constants.h  wootz_constants.cc  wootz_constants.h  wootz_paths.h  wootz_services_key_helper.cc  wootz_services_key_helper.h  wootz_switches.h
src/components/json/: BUILD.gn  DEPS  json_parser_unittest.cc
src/components/json/rs/: BUILD.gn  Cargo.toml
src/components/permissions/: BUILD.gn  features.cc  features.h  permission_context_base.cc  permission_context_base.h  permission_context_base_unittest.cc  permission_expiration_key.cc  permission_expiration_key.h  permission_expirations.cc  permission_expirations.h  permission_lifetime_manager.cc  permission_lifetime_manager.h  permission_lifetime_options.cc  permission_lifetime_options.h  permission_lifetime_pref_names.h  permission_lifetime_utils.cc  permission_lifetime_utils.h  permission_manager.cc  permission_manager.h  permission_origin_lifetime_monitor.h  permission_origin_lifetime_monitor_impl.cc  permission_origin_lifetime_monitor_impl.h  permission_origins.cc  permission_origins.h  permission_request.cc  permission_request.h  permission_request_data.cc  permission_request_data.h  permission_request_manager.cc  permission_request_manager.h  permission_uma_util.cc  permission_uma_util.h  permission_util.cc  permission_widevine_utils.cc  permission_widevine_utils.h  permissions_client.cc  permissions_client.h  request_type.cc  request_type.h  sources.gni  (+2 more)
src/components/permissions/contexts/: wootz_google_sign_in_permission_context.cc  wootz_google_sign_in_permission_context.h  wootz_localhost_permission_context.cc  wootz_localhost_permission_context.h  wootz_wallet_permission_context.cc  wootz_wallet_permission_context.h
src/components/services/wootz_wallet/: BUILD.gn  wootz_wallet_utils_service_impl.cc  wootz_wallet_utils_service_impl.h
src/components/solana_wallet/browser/: Cargo.toml  build.rs
src/components/webpack/: BUILD.gn  path-map.js  webpack.config.js
src/components/webui/: BUILD.gn  webui_resources.cc  webui_resources.h
src/components/wootz_stats/browser/: BUILD.gn  wootz_stats_updater_observer.h  (+2 more)
src/components/wootz_wallet_ui/: BUILD.gn  tsconfig.json
(+5385 files in other folders)
