# Copyright 2016 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//chrome/android/chrome_java_sources.gni")
import("//chrome/android/chrome_junit_test_java_sources.gni")
import("//chrome/android/chrome_test_java_sources.gni")
import(
    "//chrome/android/features/start_surface/javatests/start_surface_test_java_sources.gni")
import(
    "//chrome/android/features/start_surface/junit/start_surface_junit_java_sources.gni")
import("//chrome/android/features/tab_ui/tab_management_java_sources.gni")
import("//chrome/android/feed/feed_java_sources.gni")
import(
    "//chrome/browser/commerce/merchant_viewer/android/test_java_sources.gni")
import("//chrome/browser/commerce/price_tracking/android/test_java_sources.gni")
import(
    "//chrome/browser/commerce/subscriptions/test/android/test_java_sources.gni")
import("//chrome/browser/share/android/test_java_sources.gni")
import("//chrome/browser/tab_group/javatests/tab_groups_test_java_sources.gni")
import("//chrome/browser/tab_group_sync/android/test_java_sources.gni")
import("//chrome/common/features.gni")
import("//components/feed/features.gni")
import("//components/offline_pages/buildflags/features.gni")
import("//device/vr/buildflags/buildflags.gni")

# Only used for testing, should not be shipped to end users.
if (enable_offline_pages_harness) {
  chrome_java_sources += [ "java/src/org/chromium/chrome/browser/offlinepages/evaluation/OfflinePageEvaluationBridge.java" ]
  chrome_test_java_sources += [ "javatests/src/org/chromium/chrome/browser/offlinepages/OfflinePageSavePageLaterEvaluationTest.java" ]
}

chrome_junit_test_java_sources += feed_junit_test_java_sources
chrome_test_java_sources += feed_test_java_sources
chrome_test_java_sources += start_surface_test_java_sources
chrome_test_java_sources += tab_groups_test_java_sources
chrome_junit_test_java_sources += start_surface_junit_java_sources
chrome_junit_test_java_sources += tab_management_junit_java_sources
chrome_junit_test_java_sources += price_tracking_junit_test_java_sources
chrome_test_java_sources += price_tracking_test_java_sources
chrome_test_java_sources += tab_management_test_java_sources
chrome_test_java_sources += share_test_java_sources
chrome_junit_test_java_sources += share_junit_test_java_sources
chrome_junit_test_java_deps = share_junit_test_java_deps
chrome_junit_test_java_deps += feed_test_deps
chrome_junit_test_java_sources += commerce_subscriptions_junit_test_sources
chrome_junit_test_java_deps += commerce_subscriptions_junit_test_deps
chrome_test_java_sources += commerce_merchant_viewer_java_test_sources
chrome_test_java_sources += tab_group_sync_test_java_sources

if (enable_arcore) {
  chrome_java_sources += [
    "java/src/org/chromium/chrome/browser/vr/ArCompositorDelegateImpl.java",
    "java/src/org/chromium/chrome/browser/vr/ArCompositorDelegateProviderImpl.java",
  ]
}

if (enable_cardboard) {
  chrome_java_sources += [
    "java/src/org/chromium/chrome/browser/vr/VrCompositorDelegateImpl.java",
    "java/src/org/chromium/chrome/browser/vr/VrCompositorDelegateProviderImpl.java",
  ]
}

chrome_java_sources += [
  "java/src/org/chromium/chrome/browser/firstrun/WootzFirstRunFlowSequencer.java",
  "java/src/org/chromium/chrome/browser/WootzDialogFragment.java",
  "java/src/org/chromium/chrome/browser/vpn/DisconnectVpnBroadcastReceiver.java",
  "java/src/org/chromium/chrome/browser/vpn/WootzVpnNativeWorker.java",
  "java/src/org/chromium/chrome/browser/vpn/WootzVpnObserver.java",
  "java/src/org/chromium/chrome/browser/vpn/activities/VpnAlwaysOnActivity.java",
  "java/src/org/chromium/chrome/browser/vpn/activities/VpnServerSelectionActivity.java",
  "java/src/org/chromium/chrome/browser/vpn/activities/WootzVpnParentActivity.java",
  "java/src/org/chromium/chrome/browser/vpn/activities/WootzVpnProfileActivity.java",
  "java/src/org/chromium/chrome/browser/vpn/activities/WootzVpnSupportActivity.java",
  "java/src/org/chromium/chrome/browser/vpn/adapters/AlwaysOnPagerAdapter.java",
  "java/src/org/chromium/chrome/browser/vpn/adapters/WootzVpnServerSelectionAdapter.java",
  "java/src/org/chromium/chrome/browser/vpn/fragments/WootzVpnAlwaysOnErrorDialogFragment.java",
  "java/src/org/chromium/chrome/browser/vpn/fragments/WootzVpnConfirmDialogFragment.java",
  "java/src/org/chromium/chrome/browser/vpn/models/WootzVpnPrefModel.java",
  "java/src/org/chromium/chrome/browser/vpn/models/WootzVpnProfileCredentials.java",
  "java/src/org/chromium/chrome/browser/vpn/models/WootzVpnServerRegion.java",
  "java/src/org/chromium/chrome/browser/vpn/settings/VpnCalloutPreference.java",
  "java/src/org/chromium/chrome/browser/vpn/settings/WootzVpnPreferences.java",
  "java/src/org/chromium/chrome/browser/vpn/split_tunnel/ApplicationDataModel.java",
  "java/src/org/chromium/chrome/browser/vpn/split_tunnel/ApplicationListAdapter.java",
  "java/src/org/chromium/chrome/browser/vpn/split_tunnel/ApplicationViewModel.java",
  "java/src/org/chromium/chrome/browser/vpn/split_tunnel/SplitTunnelActivity.java",
  "java/src/org/chromium/chrome/browser/vpn/timer/TimerDialogFragment.java",
  "java/src/org/chromium/chrome/browser/vpn/timer/TimerItemAdapter.java",
  "java/src/org/chromium/chrome/browser/vpn/timer/TimerItemModel.java",
  "java/src/org/chromium/chrome/browser/vpn/timer/TimerItemViewHolder.java",
  "java/src/org/chromium/chrome/browser/vpn/timer/TimerUtils.java",
  "java/src/org/chromium/chrome/browser/vpn/timer/TimerVpnActionReceiver.java",
  "java/src/org/chromium/chrome/browser/vpn/utils/WootzVpnApiResponseUtils.java",
  "java/src/org/chromium/chrome/browser/vpn/utils/WootzVpnPrefUtils.java",
  "java/src/org/chromium/chrome/browser/vpn/utils/WootzVpnProfileUtils.java",
  "java/src/org/chromium/chrome/browser/vpn/utils/WootzVpnUtils.java",
]
