# Copyright (c) 2023 The Wootz Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

# Allowlist file used by wootz resources, created after merging chrome allowlist
# and wootz resources.
wootz_allowlist_file = "${root_gen_dir}/wootz_resources_allowlist.txt"
