# Copyright (c) 2022 The Wootz Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//testing/test.gni")

source_set("wootz_json_unit_tests") {
  testonly = true
  sources = [ "//components/json/json_parser_unittest.cc" ]
  deps = [
    "//components/json/rs:rust_lib",
    "//testing/gtest",
  ]
}  # source_set("wootz_wallet_unit_tests")
