# Copyright (c) 2022 The Wootz Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//testing/test.gni")

source_set("util") {
  sources = [
    "rewards_util.cc",
    "rewards_util.h",
  ]

  deps = [
    "//chrome/components/wootz_rewards/common",
    "//chrome/browser/profiles:profile",
    "//components/prefs",
  ]
}