# Copyright (c) 2021 The Wootz Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.


chrome_browser_wootz_rewards_sources = [
  "//chrome/browser/wootz_rewards/rewards_service_factory.cc",
  "//chrome/browser/wootz_rewards/rewards_service_factory.h",
]

chrome_browser_wootz_rewards_deps = [
  "//base",
#   "//wootz/browser/wootz_rewards:util",
  "//chrome/components/wootz_rewards/browser",
  "//chrome/components/wootz_rewards/common",
  "//chrome/components/wootz_rewards/core:headers",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles:profile",
  "//chrome/browser/ui",
  "//components/keyed_service/content",
  "//components/prefs",
  "//components/sessions",
  "//extensions/buildflags",
]


if (is_android) {
  chrome_browser_wootz_rewards_sources += [
    "//chrome/browser/wootz_rewards/android/wootz_rewards_native_worker.cc",
    "//chrome/browser/wootz_rewards/android/wootz_rewards_native_worker.h",
  ]

  chrome_browser_wootz_rewards_deps += [ "//chrome/components/wootz_ads/browser" ]
}

if (!is_android) {
  chrome_browser_wootz_rewards_deps +=
      [ "//chrome/components/wootz_rewards/common:features" ]
}